--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="imagenes/Frame 6.png" alt="logo alura">
+        <img class="logo" src="./imagenes/Frame 6.png" alt="logo alura">
     </header>
 
     <main>
