--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <main>
 
         <section>
-            <textarea class="textArea" cols="30" rows="7" placeholder="Ingrese el texto aquí"></textarea>
+            <div>
+                <textarea class="textArea" cols="30" rows="7" placeholder="Ingrese el texto aquí"></textarea>
+            </div>
+            
             <div>
                 <h6 class="informacion">Solo letras minusculas y sin acentos</h6>
             </div>
